Add MEADS sparse regression example

--- a/book/references.bib
+++ b/book/references.bib
@@ -1,3 +1,72 @@
+@misc{bettencourt2021sparsity ,
+  author = "Bettencourt, Michael",
+  year = "2021",
+  title = "Sparsity Blues",
+  url = "https://betanalpha.github.io/assets/case_studies/modeling_sparsity.html",
+}
+
+@article{carvalho2010horseshoe,
+  title={The horseshoe estimator for sparse signals},
+  author={Carvalho, Carlos M and Polson, Nicholas G and Scott, James G},
+  journal={Biometrika},
+  volume={97},
+  number={2},
+  pages={465--480},
+  year={2010},
+  publisher={Oxford University Press}
+}
+
+@misc{dua2017machine ,
+  author = "Dua, Dheeru and Graff, Casey",
+  year = "2017",
+  title = "{UCI} Machine Learning Repository",
+  url = "http://archive.ics.uci.edu/ml",
+  institution = "University of California, Irvine, School of Information and Computer Sciences"
+}
+
+@inproceedings{hoffman2022tuning,
+  title={Tuning-Free Generalized Hamiltonian Monte Carlo},
+  author={Hoffman, Matthew D and Sountsov, Pavel},
+  booktitle={International Conference on Artificial Intelligence and Statistics},
+  pages={7799--7813},
+  year={2022},
+  organization={PMLR}
+}
+
+@article{horowitz1991generalized,
+  title={A generalized guided Monte Carlo algorithm},
+  author={Horowitz, Alan M},
+  journal={Physics Letters B},
+  volume={268},
+  number={2},
+  pages={247--252},
+  year={1991},
+  publisher={Elsevier}
+}
+
+@book{murphy2023probabilistic,
+  title={Probabilistic machine learning: Advanced topics},
+  author={Murphy, Kevin P},
+  year={2023},
+  publisher={MIT Press}
+}
+
+@article{neal2020non,
+  title={Non-reversibly updating a uniform [0, 1] value for Metropolis accept/reject decisions},
+  author={Neal, Radford M},
+  journal={arXiv preprint arXiv:2001.11950},
+  year={2020}
+}
+
+@article{papaspiliopoulos2007general,
+  title={A general framework for the parametrization of hierarchical models},
+  author={Papaspiliopoulos, Omiros and Roberts, Gareth O and Sk{\"o}ld, Martin},
+  journal={Statistical Science},
+  pages={59--73},
+  year={2007},
+  publisher={JSTOR}
+}
+
 @inproceedings{zhang2019cyclical,
   title={Cyclical Stochastic Gradient MCMC for Bayesian Deep Learning},
   author={Zhang, Ruqi and Li, Chunyuan and Zhang, Jianyi and Chen, Changyou and Wilson, Andrew Gordon},
