--- a/book/references.bib
+++ b/book/references.bib
@@ -1,2 +1,6 @@
----
----
+@inproceedings{zhang2019cyclical,
+  title={Cyclical Stochastic Gradient MCMC for Bayesian Deep Learning},
+  author={Zhang, Ruqi and Li, Chunyuan and Zhang, Jianyi and Chen, Changyou and Wilson, Andrew Gordon},
+  booktitle={International Conference on Learning Representations},
+  year={2019}
+}
