--- a/book/references.bib
+++ b/book/references.bib
@@ -135,3 +135,39 @@
   year = {2010},
   copyright = {arXiv.org perpetual, non-exclusive license}
 }
+
+@inproceedings{tronarp2022fenrir,
+  title={Fenrir: Physics-Enhanced Regression for Initial Value Problems},
+  author={Tronarp, Filip and Bosch, Nathanael and Hennig, Philipp},
+  booktitle={International Conference on Machine Learning},
+  pages={21776--21794},
+  year={2022},
+  organization={PMLR}
+}
+
+@inproceedings{kersting2020differentiable,
+  title={Differentiable Likelihoods for Fast Inversion of 'Likelihood-Free' Dynamical Systems},
+  author={Kersting, Hans and Kr{\"a}mer, Nicholas and Schiegg, Martin and Daniel, Christian and Tiemann, Michael and Hennig, Philipp},
+  booktitle={International Conference on Machine Learning},
+  pages={5198--5208},
+  year={2020},
+  organization={PMLR}
+}
+
+@inproceedings{kramer2022probabilistic,
+  title={Probabilistic ODE Solutions in Millions of Dimensions},
+  author={Kr{\"a}mer, Nicholas and Bosch, Nathanael and Schmidt, Jonathan and Hennig, Philipp},
+  booktitle={International Conference on Machine Learning},
+  pages={11634--11649},
+  year={2022},
+  organization={PMLR}
+}
+
+@article{kramer2021linear,
+  title={Linear-Time Probabilistic Solutions of Boundary Value Problems},
+  author={Kr{\"a}mer, Nicholas and Hennig, Philipp},
+  journal={Advances in Neural Information Processing Systems},
+  volume={34},
+  pages={11160--11171},
+  year={2021}
+}
