Clean up documentation

--- a/book/references.bib
+++ b/book/references.bib
@@ -171,3 +171,12 @@
   pages={11160--11171},
   year={2021}
 }
+
+@misc{zhang2022pathfinder,
+  title={Pathfinder: Parallel quasi-Newton variational inference}, 
+  author={Lu Zhang and Bob Carpenter and Andrew Gelman and Aki Vehtari},
+  year={2022},
+  eprint={2108.03782},
+  archivePrefix={arXiv},
+  primaryClass={stat.ML}
+}
