--- a/book/references.bib
+++ b/book/references.bib
@@ -180,3 +180,19 @@
   archivePrefix={arXiv},
   primaryClass={stat.ML}
 }
+
+@article{robnik2023microcanonical,
+  title={Microcanonical Hamiltonian Monte Carlo},
+  author={Robnik, Jakob and De Luca, G Bruno and Silverstein, Eva and Seljak, Uro{\v{s}}},
+  journal={Journal of Machine Learning Research},
+  volume={24},
+  pages={1--34},
+  year={2023}
+}
+
+@article{robnik2023microcanonical,
+  title={Microcanonical Langevin Monte Carlo},
+  author={Robnik, Jakob and Seljak, Uro{\v{s}}},
+  journal={arXiv preprint arXiv:2303.18221},
+  year={2023}
+}
